[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Script/spacekey_tutorial.gd" type="Script" id=1]
[ext_resource path="res://Assets/Gerald's Keys/Keys/Space-Key.png" type="Texture" id=2]
[ext_resource path="res://Assets/Maps/Assets/fade_out.tres" type="Animation" id=3]
[ext_resource path="res://Assets/Maps/Assets/fade_in.tres" type="Animation" id=4]

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=20]
radius = 127.256

[node name="spacekey_tutorial" type="AnimatedSprite"]
position = Vector2( 796.874, 55.2656 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 19 )
speed_scale = 0.3
playing = true
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 20 )

[node name="animationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = ExtResource( 4 )
anims/fade_out = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]
